# worktree-architect

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  orchestrator.config.yaml  package-lock.json  package.json  tsconfig.base.json
.cursor/commands/: build-feature-test-app.md  build-feature.md
.cursor/skills/execute-without-terminal/: SKILL.md
.cursor/skills/orch-build-feature/: SKILL.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CURSOR_GLOBAL_INSTALL.md  FEATURE_EXECUTION.md  NEW_PROJECT.md  TESTING.md
examples/: job-example.yaml
install/: README.md
install/commands/: build-feature-test-app.md  build-feature.md  orchestrate-bootstrap.md
install/rules/: 000-system-manifesto.mdc  007-agent-run-commands.mdc  global-cleansing-standards.mdc  orch-feature-runs.mdc  orchestrator-integration.mdc
install/skills/execute-without-terminal/: SKILL.md
install/skills/orch-auditor-cleanser/: SKILL.md
install/skills/orch-auditor-doc-updater/: SKILL.md
install/skills/orch-auditor-janitor/: SKILL.md
install/skills/orch-auditor-semantic-merge/: SKILL.md
install/skills/orch-build-feature/: SKILL.md
install/skills/orch-l1-architect/: SKILL.md
python/orchestrator_plugins/: README.md  pyproject.toml
python/orchestrator_plugins/src/orchestrator_plugins/: __init__.py  cli.py  runner.py
python/orchestrator_plugins/tests/: test_runner.py
scripts/: install-cursor-global.sh  orch-feature-start-worker.mjs  scaffold-hangman-test-app.mjs  verify-github-orch-sync.mjs
tools/: validate-cursor-assets.mjs
(+2 files in other folders)
